# -*-Mode: makefile;-*-
# $Header: /Volumes/cvsrep/developer/OpenAnalysis/Makefile.am,v 1.73 2007/10/08 19:19:06 utke Exp $

#############################################################################
#
# File:
#   $Source: /Volumes/cvsrep/developer/OpenAnalysis/Makefile.am,v $
#
# Description:
#   *Process with automake to produce Makefile.in*
#
#   Note: All local variables are prefixed with MY to prevent name
#   clashes with automatic automake variables.
#
#############################################################################

# We do not want the standard GNU files (NEWS README AUTHORS ChangeLog...)
AUTOMAKE_OPTIONS = foreign

#############################################################################
# Automake rules
#############################################################################

SUBDIRS = \
	src

#############################################################################
# Other rules
#############################################################################
